<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ie.trusthub.trusthub2.TrustHubNumberActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/user62"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/helloText"
        android:id="@+id/textView6"
        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trustHubIDText"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_dark"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trusthubNumberMainText"
        android:id="@+id/textView8"
        android:gravity="center"
        android:layout_below="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourTrusthubBtn"
        android:id="@+id/button7"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:capitalize="none"
        android:onClick="yourTrustHubs"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SearchTrustHubsBtn"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:capitalize="none"
        android:onClick="searchTrustHubs"/>
</RelativeLayout>
